--- a/style.css
+++ b/style.css
@@ -142,10 +142,10 @@ footer{
     padding-bottom: 0px;
 }
 @media screen and (width<=700px){
-    #image-grid .small{
+    #image_grid .small{
         flex-basis: 100%;
     }
-    #image-grid .large{
+    #image_grid .large{
         flex-basis: 100%;
     }
 }
